--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,23 @@
 version: '3'
 services:
   database:
-    image: "postgres" # use latest official postgres version
-    env_file:
-      - database.env # configure postgres
+    image: postgres:latest
+    restart: always
+    ports:
+      - 5432:5432
+    environment:
+      POSTGRES_DB: admin
+      POSTGRES_USER: admin
+      POSTGRES_PASSWORD: admin_password
     volumes:
       - database-data:/var/lib/postgresql/data/ # persist data even if container shuts down
+      - ./config/db/database_setup.sql:/docker-entrypoint-initdb.d/database_setup.sql # setup database on first start
   webrick:
     build: .
     volumes:
       - .:/buycotest
     ports:
-      - 8000:8000/tcp
+      - 8000:8000
     depends_on:
       - database
 volumes:
