--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     environment:
       POSTGRES_DB: admin
       POSTGRES_USER: admin
-      POSTGRES_PASSWORD: admin_password
+      POSTGRES_PASSWORD: admin
     volumes:
       - database-data:/var/lib/postgresql/data/ # persist data even if container shuts down
       - ./config/db/database_setup.sql:/docker-entrypoint-initdb.d/database_setup.sql # setup database on first start
@@ -18,6 +18,8 @@ services:
       - .:/buycotest
     ports:
       - 8000:8000
+    links:
+      - database:db_link
     depends_on:
       - database
 volumes:
